--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
         </div>
 
         <div class="bio-text">
-          <h1>YOUR NAME</h1>
-          <h4>Student at YOUR SCHOOL</h4>
+          <h1>YOUR ISRAT TANHA </h1>
+          <h4>THOMAS A. EDISON CTE HIGH SCHOOL</h4>
           <p>
-            Paste your portfolio purpose statement from your Curator Guide here.
+            Paste This portfolio shows the Python projects I have created, including animations, mini-games, and music coding. 
+            I built these projects to practice my programming skills and to be creative while solving problems. 
+            Each project demonstrates what I have learned about using Python, like loops, functions, graphics, and working with sounds.
+             This portfolio is meant to show my growth as a programmer and to share the work I am proud of with teachers, peers, 
+             and anyone interested in my coding projects.
           </p>
         </div>
       </div>
@@ -105,7 +109,7 @@
         <iframe src="PASTE-PROJECT-LINK-1" title="Project 1"></iframe>
 
         <div class="reflection">
-          <h3>Project Title 1</h3>
+          <h3>Holiday- Draw</h3>
           <p>
             Paste your curated reflection for Project 1 here (3–5 sentences).
           </p>
